Fix truncated button text on duplicates find fewer/more buttons in french locale

--- a/client/components/duplicates/duplicates.css
+++ b/client/components/duplicates/duplicates.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 1em;
 }
 
 .duplicates-explanation p {
@@ -11,12 +12,7 @@
 }
 
 .duplicates-explanation p.buttons-group {
-    margin-left: 1em;
     flex-shrink: 0;
-}
-
-.duplicates-explanation p.buttons-group > button {
-    width: 33%;
 }
 
 table.duplicates td[rowspan] {
